--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://akhaled22.github.io/calculatorsHome.html",
   "name": "changetoreact",
   "version": "0.1.0",
   "private": true,
