--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://akhaled22.github.io/calculatorsHome.html",
+  "homepage": "https://akhaled22.github.io/akhaled22.github.io",
   "name": "changetoreact",
   "version": "0.1.0",
   "private": true,
