--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "changetoreact",
   "version": "0.1.0",
+  "homepage": "https://akhaled22.github.io/AKhaled22.github.io",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
